@@ -21,3 +21,15 @@ dependencies {
 
 description = "config-migration"
 
+
+compileJava {
+    //inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                "--module-path", classpath.asPath,
+                "--add-modules", "toml4j",
+        ]
+        classpath = files()
+    }
+}
+
