@@ -105,3 +105,14 @@ description = "transaction-jaxrs"
 
 generateSwaggerDocumentation.dependsOn(loaddeps)
 jar.dependsOn(generateSwaggerDocumentation)
+
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                "--module-path", classpath.asPath,
+                "--add-modules", "swagger.annotations"
+        ]
+        classpath = files()
+    }
+}
