@@ -19,4 +19,12 @@ dependencies {
 
 }
 
-
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                "--module-path", classpath.asPath,
+                "--add-modules", "swagger.annotations",
+        ]
+        classpath = files()
+    }
+}
